--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import groovy.swing.SwingBuilder
+
 buildscript {
     repositories {
         jcenter()
@@ -8,12 +10,15 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
-//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
 version = "1.0"
 group = "com.github.terminatornl.tickcentral" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "TickCentral"
+
+if (!project.gradle.startParameter.taskNames.contains("install")) {
+    version = "TEST"
+}
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -24,7 +29,7 @@ minecraft {
     ///home/predator/.gradle/caches/minecraft/de/oceanlabs/mcp/mcp
     version = "1.12.2-14.23.5.2838"
     runDir = "run"
-    
+
     // the mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
     // stable_#            stables are built at the discretion of the MCP team.
@@ -32,30 +37,6 @@ minecraft {
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20171003"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-}
-
-dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
-    // except that these dependencies get remapped to your current MCP mappings
-    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
 }
 
 processResources {
@@ -66,18 +47,18 @@ processResources {
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-                
+
         // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        expand 'version': project.version, 'mcversion': project.minecraft.version
     }
-        
+
     // copy everything else except the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
 }
 
-task install {
+task install << {
     delete fileTree('run_server_obf/mods') {
         include "$archivesBaseName*"
     }
@@ -90,6 +71,57 @@ task install {
 
 jar {
     manifest.attributes(
-        'FMLCorePlugin': 'com.github.terminatornl.tickcentral.TickCentral'
+            'FMLCorePlugin': 'com.github.terminatornl.tickcentral.TickCentral'
     )
 }
+
+task signJar(type: SignJar, dependsOn: reobfJar) {
+    onlyIf {
+        project.gradle.startParameter.taskNames.contains("install")
+    }
+    if (project.gradle.startParameter.taskNames.contains("install")) {
+
+
+        String password
+
+        if (password == null) {
+            if (System.console() != null) {
+                password = new String(System.console().readPassword("Keystore password"))
+            } else {
+                new SwingBuilder().edt {
+                    dialog(modal: true,
+                            title: 'Keystore password',
+                            alwaysOnTop: true,
+                            resizable: false,
+                            locationRelativeTo: null,
+                            pack: true,
+                            show: true
+                    ) {
+                        vbox {
+                            label(text: "                                                ")
+                            input = passwordField()
+                            button(defaultButton: true, text: 'OK', actionPerformed: {
+                                password = new String(input.password);
+                                dispose();
+                            })
+                        }
+                    }
+                }
+            }
+        }
+
+        if (password == null || password.size() < 1) {
+            throw new GradleException("No password supplied")
+        }
+
+        alias = "TerminatorNL"
+        keyStore = "keystore.jks"
+        storePass = password
+        keyPass = password
+
+        inputFile = jar.archivePath
+        outputFile = jar.archivePath
+    }
+}
+install.dependsOn build
+build.dependsOn signJar
