Make install task name more explicit in function

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ processResources {
     }
 }
 
-task install << {
+task installToObfServer << {
     delete fileTree('run_server_obf/mods') {
         include "$archivesBaseName*"
     }
