--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,19 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'maven-publish'
 
 
 version = "2.0"
 group = "com.github.terminatornl.tickcentral" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "TickCentral"
 
-if (project.gradle.startParameter.taskNames.contains("jar")) {
+def taskNames = project.gradle.startParameter.taskNames
+if (taskNames.contains("jar")) {
     version = "$version-dev"
-}else if (project.gradle.startParameter.taskNames.contains("sign")) {
+}else if (taskNames.contains("sign")) {
     //Version not affected
-}else if (!project.gradle.startParameter.taskNames.contains("install")) {
+}else if (!taskNames.find {it.toLowerCase().startsWith("publish")} && !taskNames.contains("install")) { // matches "publish", "publishToMavenLocal" and "install" tasks
     version = "$version-testing"
 }
 
@@ -135,3 +137,14 @@ task signJar(type: SignJar, dependsOn: reobfJar) {
 }
 install.dependsOn build
 build.dependsOn signJar
+
+publishing { // for the publishToMavenLocal task
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+    repositories {
+        mavenLocal()
+    }
+}
