--- a/build.gradle
+++ b/build.gradle
@@ -13,17 +13,16 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'maven-publish'
 
 
-version = "2.2"
+version = "2.4"
 group = "com.github.terminatornl.tickcentral" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "TickCentral"
 
 def taskNames = project.gradle.startParameter.taskNames
-if (taskNames.contains("jar")) {
-    version = "$version-dev"
-}else if (taskNames.contains("sign")) {
-    //Version not affected
-}else if (!taskNames.find {it.toLowerCase().startsWith("publish")} && !taskNames.contains("install")) { // matches "publish", "publishToMavenLocal" and "install" tasks
+if(!taskNames.contains("sign")){
     version = "$version-testing"
+}
+if (taskNames.contains("jar") || taskNames.find {it.toLowerCase().startsWith("publish")}) {
+    version = "$version-dev"
 }
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
